src/app/components/result/result.component.css
article header div > i.fa {
  margin-right: 3rem;
  margin-top: 0.1rem;
  width: 1rem;
}

article h4 {
  font-size: 1rem;
  display: inline-block;
  margin: 0;
}

.result {
  --result-info-color: #157347;
  --result-info-bg: var(--result-info-color);
  --result-notice-color: #0f75e1;
  --result-notice-bg: var(--result-notice-color);
  --result-warning-color: #b55e03;
  --result-warning-bg: #ff9019;
  --result-error-color: #bb2d3b;
  --result-error-bg: var(--result-error-color);
  --result-critical-color: var(--result-error-color);
  --result-critical-bg: var(--result-error-color);
}

article header.info {
  color: var(--result-info-color);
}

article header.notice {
  color: var(--result-notice-color);
}

article header.warning {
  color: var(--result-warning-color);
}

article header.error {
  color: var(--result-error-color);
}

article header.critical {
  color: var(--result-critical-color);
}

article h4 i {
  width: 1rem;
  display: inline-block;
  text-align: center;
  margin-left: -1.3rem ;
  margin-right: 0.3rem;
}

article header  {
  display: flex;
  align-items: baseline;
}

article header div {
  display: flex;
  cursor: pointer;
  margin: 0.25rem 0;
}
article header .test-case-id {
  display: inline-block;
  background-color: #d3eeff;
  color: #555454;
  margin-left: 1em;
  font-size: 0.9em;
  padding: 0.15em 0.4em;
  white-space: nowrap;
}

article div.no-header ul {
  margin-bottom: 0.5rem;
}

article ul li .level {
  display: inline;
  padding: 0.2em 0.3em;
  border-radius: 0.3em;
  font-size: 0.8em;
  margin-right: 0.5em;
}

.filters .active.all {
  background-color: #919191;
}

.badge.info,
.filters .active.info,
article ul li .level.info {
  background: var(--result-info-bg);
  color: white;
}

.badge.notice,
.filters .active.notice,
article ul li .level.notice {
  background: var(--result-notice-bg);
  color: white;
}

.badge.warning,
.filters .active.warning,
article ul li .level.warning {
  background: var(--result-warning-bg);
  color: black;
}

.badge.error,
.filters .active.error,
article ul li .level.error {
  background: var(--result-error-bg);;
  color: white;
}

.badge.critical,
.filters .active.critical,
article ul li .level.critical {
  background: var(--result-critical-bg);;
  color: white;
}

article li {
  list-style: none;
  display: flex;
}

article li p {
  word-break: normal;
  overflow-wrap: anywhere;
  margin: 0;
}

article ul {
  padding-left: 4em;
}

.collapsed {
  display: none!important;
}

article h3 {
  display: flex;
  align-items: center;
  font-size: 1.4rem;
  cursor: pointer;
  margin-bottom: 0;
}

article h3 div.badge:first-of-type {
  margin-left: 1rem;
}

article h3 .badge {
  margin-right: 0.5rem;
  font-size: .8rem;
}

article h3 .badge i {
  width: 1em;
}

article.expanded h3 {
  margin-bottom: 0.5rem;
}

article h3 i.caret {
  transform: rotate(0), translate(0, 0);
  transition: 0.1s transform;
  display: inline-block;
  width: 1em;
}

article.expanded h3 i.caret {
  transform: rotate(90deg) translate(0.3em, 0.15em);
}

.result section.details > article {
  background: #f7f7f7;
  padding: 0.5rem;
  margin-bottom: 1rem;
}

#link_location {
  width: 100%;
}

.modal-title {
  color: #000;
}

.vertical-align {
  display: flex;
  align-items: center;
}

.search {
  flex: 1;
  min-width: 300px;
}

.nav-link {
  cursor: pointer;
  color: inherit;
}

.dropdown-body {
    position: relative;
    padding: 1rem;
    white-space: nowrap;
}

button.share + .dropdown-menu .dropdown-body {
    min-width: calc(min(420px, 100vw - 2rem));
    display: flex;
}

button.btn-clipboard:hover {
    border: 1px solid #cdc7c2;
}

button.btn-clipboard > i.fa-check {
    color: #157347;
}

button.btn-clipboard > i.fa-remove {
    color: #bb2d3b;
}

.actions-btn {
  flex-grow: 1;
  display: flex;
  justify-content: flex-end;
}

.filters {
  display: flex;
  flex-wrap: wrap;
}

.filters > * {
  margin-top: 1rem;
}

.export, .share, .settings {
  margin-left: 0.25rem;
}

.history > i, .export > i, .share > i, .settings > i {
  margin-right: 0.25rem;
}


@media(max-width:767px){
  .result-header {
    width: 100%;
  }

  .result .module-name {
    display: none;
  }

  .result section .entry div.severity {
    min-width: 30%;
  }

  .result section > div {
    padding-left: 20px;
  }

  .actions-btn > div {
    width: 100%;
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
  }

  .actions-btn > div > * {
    flex-grow: 1;
  }

  .actions-btn > div > div {
    display: flex!important;
  }

  .actions-btn > div > div > button {
    flex-grow: 1;
  }

  article header {
    flex-direction: column;
  }

  article header .test-case-id {
    margin-left: 1.2rem;
    margin-bottom: .75rem;
  }

  article header div > i.fa {
    margin-right: 1.5rem;
  }

  article ul {
    padding-left: 1.2em;
  }
}

@media(max-width:991px) {
  .filters > ul {
    flex-grow: 1;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
  }
}

